--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,6 @@
   <body>
     <div id="carousel"></div>
 
-    <script src="bundle.js"></script>
+    <script src="https://carousel-bundle.s3-us-west-2.amazonaws.com/bundle.js"></script>
   </body>
 </html>
