--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
+
   <body>
     <div id="carousel"></div>
 
