--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,12 +1,15 @@
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
     <div id="carousel"></div>
+    <div id="reviews"></div>
 
     <script src="https://carousel-bundle.s3-us-west-2.amazonaws.com/bundle.js"></script>
+    <script src="reviews.js"></script>
   </body>
 </html>
