Update with S3 bundles

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,11 @@
 
   <body>
     <div id="carousel"></div>
+    <div id="checkout"></div>
     <div id="reviews"></div>
 
     <script src="https://carousel-bundle.s3-us-west-2.amazonaws.com/bundle.js"></script>
-    <script src="reviews.js"></script>
+    <script src="https://ghrsea07.s3-us-west-2.amazonaws.com/reviews-bundle.js"></script>
+    <script src="https://checkoutbundle.s3.us-east-2.amazonaws.com/bundle.js"></script>
   </body>
 </html>
