--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,14 +1,26 @@
-<html>
+<!doctype html>
+
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Coupon App">
+    <title>Coupon App</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
-    <div id="carousel"></div>
-    <div id="checkout"></div>
-    <div id="reviews"></div>
+    <div id="app">
+      <div class="column left">
+        <div id="carousel"></div>
+        <div id="reviews"></div>
+      </div>
+      <div class="column">
+        <div id="checkout"></div>
+      </div>
+    </div>
 
     <script src="https://carousel-bundle.s3-us-west-2.amazonaws.com/bundle.js"></script>
     <script src="https://ghrsea07.s3-us-west-2.amazonaws.com/reviews-bundle.js"></script>
